# nlp_project_template

./: README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.project_name}}/: LICENSE.md  README.md  pyproject.toml
{{cookiecutter.project_name}}/test/unit/processors/: test_preprocess_text.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/processors/: preprocess_text.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/processors/preprocessors/: lemmatization.py  lowercase.py  punctuation.py  stemming.py  stopwordremoval.py  tokenization.py  whitespace.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/visualize/: streamlit_app.py
