[tool.poetry]
name = "nlp-template"
version = "0.1.0"
description = ""
authors = ["acharyamsg <acharya.prabhakar@msg.group>"]
readme = "README.md"
packages = [{include = "nlp_template"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"
flake8 = "^6.0.0"
streamlit = "^1.18.1"
nltk = "^3.8.1"
click = "^8.1.3"
pytest-cookies = "^0.6.1"
pytest-lazy-fixture = "^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
